# esp32s2-ulp-riscv-delay

./: CMakeLists.txt  LICENSE  README.md
main/: CMakeLists.txt  Kconfig.projbuild  esp32s2-ulp-riscv-delay.c
main/ulp/: main.c  wait.S
